  * New +nested_attribute+ option for configuring data attributes (thus applicable for a column, a field, or a +netzke_attribute+ in the model). When set to true for an association attribute (e.g. author__name), assigning a value to it will change the association's attribute, *not* trying to find an association by name and reassign it if found (default behavior).

= v0.6.2 - 2010-11-05
* compatibility with netzke-core 0.6.4
* bug fix
  * BorderLayoutPanel persistence fix

= v0.6.1 - 2010-11-04
* enhancements
  * BorderLayoutPanel persistence: remembers region sizes and collapsed/expanded states
  * tooltips for grid buttons

* bug fix
  * auto-detection of association's method when the latter is virtual was broken in 1.9.2

= v0.6.0 - 2010-10-24
* netzke-core 0.6.0 compatibility, thorough refactoring
* Much more thorough testing (cucumber and rspec)
* FormPanel/GridPanel dynamic column/field configuration has been left out (planned for a separate gem)
* different bug fixes

* enhancements
  * if omitted in config, a column for the primary key is automatically added to Grid/FormPanel

* API incompatibilities
  * in FormPanel, define the fields layout directly in :items, not in :fields or :columns

* new
  * FormPanel allows for arbitrary layout of fields

= v0.5.14 - 2010-09-08
* bug fix
  * fields configurator wouldn't open in some cases
  * icons location was hardcoded in search panel (credits to @pschyska)
  * quick fix for datetimes not being displayed in the preferred timezone
  * ext_config options :enable_edit_in_form and :enable_advanced_search now do have effect
  * PropertyEditor fixed for Grid/FormPanel
  * Grid/FormPanel again obeys persistent_config option when loading columns/fields

* enhancements
  * numberfield is default in grids also for columns of type float
  * more narrow exception rescuing in GridPanel code
  * combobox options can now be searched ("type ahead") also in virtual columns (not efficient though, use at own risk!)