@@ -2,6 +2,7 @@
   bodyStyle     : 'padding:5px 5px 0',
   autoScroll    : true,
   labelWidth    : 150,
+  applyMask     : {msg: "Updating..."},
 
   defaults       : {
     anchor       : '-20', // to leave some space for the scrollbar
@@ -15,12 +16,14 @@
     }
   },
 
-  initComponent  : function(){
+  initComponent: function(){
     this.recordFields = []; // Record
     this.recordIndex = 0;
 
     var Record = Ext.data.Record.create(this.recordFields);
     this.reader = new Ext.data.RecordArrayReader({root:"data"}, Record);
+
+    if (!this.bbar) this.bbar = {xtype: 'toolbar'}; // an empty bbar by default, so that we can dynamically add buttons
 
     // Now let Ext.form.FormPanel do the rest
     Netzke.classes.Basepack.FormPanel.superclass.initComponent.call(this);
@@ -29,7 +32,52 @@
     this.addEvents('apply');
   },
 
-  onApply         : function() {
+  afterRender: function(){
+    Netzke.classes.Basepack.FormPanel.superclass.afterRender.call(this);
+
+    // render in display mode?
+    if (this.locked) this.setDisplayMode(true);
+  },
+
+  onEdit: function(){
+    this.setDisplayMode(false);
+  },
+
+  onCancel: function(){
+    this.setDisplayMode(true, true);
+  },
+
+  updateToolbar: function(){
+    var tbar = this.getBottomToolbar();
+
+    if (this.inDisplayMode) {
+      var buttonIndex = tbar.items.findIndex("name", "apply");
+      var buttonToRemove = tbar.items.itemAt(buttonIndex);
+      if (buttonToRemove) {
+        tbar.remove(buttonToRemove);
+      }
+
+      var buttonIndex = tbar.items.findIndex("name", "cancel");
+      var buttonToRemove = tbar.items.itemAt(buttonIndex);
+      if (buttonToRemove) {
+        tbar.remove(buttonToRemove);
+      }
+      tbar.add(this.actions.edit);
+    } else {
+      var buttonIndex = tbar.items.findIndex("name", "edit");
+      var buttonToRemove = tbar.items.itemAt(buttonIndex);
+      if (buttonToRemove) {
+        tbar.remove(buttonToRemove);
+      }
+      tbar.insertButton(buttonIndex, this.actions.apply);
+      tbar.insertButton(buttonIndex, this.actions.cancel);
+    }
+
+    tbar.doLayout();
+  },
+
+
+  onApply: function() {
     if (this.fireEvent('apply', this)) {
       var values = this.getForm().getValues();
 
@@ -38,6 +86,10 @@
         var field = this.getForm().findField(fieldName);
         if (!field || field.disabled) delete values[fieldName];
       }
+
+      if (!this.applyMaskCmp) this.applyMaskCmp = new Ext.LoadMask(this.bwrap, this.applyMask);
+
+      this.applyMaskCmp.show();
 
       if (this.fileUpload) {
         // Not a Netzke's standard endpoint call, because the form is multipart
@@ -50,24 +102,39 @@
             // It will always be failure, as we don't play along with the Ext success indication (not returning {success: true})
             this.bulkExecute(Ext.decode(action.response.responseText));
             this.fireEvent('submitsuccess');
+            if (this.applyMaskCmp) this.applyMaskCmp.hide();
           },
           scope: this
         });
       } else {
         // Submit the data and process the result
         this.netzkeSubmit(Ext.apply((this.baseParams || {}), {data:Ext.encode(values)}), function(result){
-          if (result === "ok") {this.fireEvent("submitsuccess")};
+          if (result === "ok") {
+            this.fireEvent("submitsuccess");
+            if (this.applyMaskCmp) this.applyMaskCmp.hide();
+            if (this.mode == "lockable") this.setDisplayMode(true);
+          };
         }, this);
       }
     }
   },
 
-  setFormValues   : function(values){
+  setFormValues: function(values){
     var normValues = {};
     for (var key in values) {
-      normValues[key.underscore()] = values[key];
+      var normKey = key.replace("_", "__").underscore();
+      normValues[normKey] = values[key];
     }
     this.getForm().setValues(normValues);
+  },
+
+  setDisplayMode: function(onOff, cancel){
+    if (this.inDisplayMode == onOff) return;
+    this.getForm().items.each(function(i){i.setDisplayMode(onOff);});
+    this.getForm().cleanDestroyed(); // because fields inside of composite fields are not auto-cleaned!
+    this.doLayout();
+    this.inDisplayMode = onOff;
+    this.updateToolbar();
   }
 
 }
