@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Sergei Kozlov"]
-  s.date = %q{2010-12-19}
+  s.date = %q{2010-12-21}
   s.description = %q{A set of full-featured extendible Netzke components (such as FormPanel, GridPanel, Window, BorderLayoutPanel, etc) which can be used as building block for your RIA}
   s.email = %q{sergei@playcode.nl}
   s.extra_rdoc_files = [
@@ -68,6 +68,7 @@ Gem::Specification.new do |s|
     "lib/netzke/basepack/form_panel.rb",
     "lib/netzke/basepack/form_panel/fields.rb",
     "lib/netzke/basepack/form_panel/javascripts/comma_list_cbg.js",
+    "lib/netzke/basepack/form_panel/javascripts/display_mode.js",
     "lib/netzke/basepack/form_panel/javascripts/main.js",
     "lib/netzke/basepack/form_panel/javascripts/n_radio_group.js",
     "lib/netzke/basepack/form_panel/javascripts/netzkefileupload.js",
@@ -132,6 +133,8 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/books_bound_to_author.rb",
     "test/rails_app/app/components/form_without_model.rb",
     "test/rails_app/app/components/generic_user_form.rb",
+    "test/rails_app/app/components/lockable_book_form.rb",
+    "test/rails_app/app/components/lockable_user_form.rb",
     "test/rails_app/app/components/simple_accordion.rb",
     "test/rails_app/app/components/simple_auth_app.rb",
     "test/rails_app/app/components/simple_panel.rb",
@@ -257,6 +260,8 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/books_bound_to_author.rb",
     "test/rails_app/app/components/form_without_model.rb",
     "test/rails_app/app/components/generic_user_form.rb",
+    "test/rails_app/app/components/lockable_book_form.rb",
+    "test/rails_app/app/components/lockable_user_form.rb",
     "test/rails_app/app/components/simple_accordion.rb",
     "test/rails_app/app/components/simple_auth_app.rb",
     "test/rails_app/app/components/simple_panel.rb",
