@@ -1,0 +1,7 @@
+class LockableUserForm < UserForm
+  def default_config
+    super.merge(
+      :mode => :lockable
+    )
+  end
+end
