@@ -1,8 +1,9 @@
 class UserForm < Netzke::Basepack::FormPanel
   js_property :title, User.model_name.human
 
-  config do
-    {
+  def configuration
+    sup = super
+    sup.merge({
       :model => 'User',
       :record_id => User.first.id,
       :items => [
@@ -16,6 +17,12 @@ class UserForm < Netzke::Basepack::FormPanel
         ]},
         :role__name
       ]
-    }
+    })
   end
+
+  # Uncomment for visual mask testing
+  # def netzke_submit_endpoint(params)
+  #   sleep 2
+  #   super
+  # end
 end
